# markdown-to-video

./: .gitignore  Dockerfile  LICENSE  README.md  assets.md  pyproject.toml  script_demo.json
.gemini/: HISTORY.jsonl
assets/: README_cn.md
development_assets/: 项目架构.md
lib/: api_stubs.txt  examples.txt
output/: concat_list.txt  report_20251215_035321.json  storyboard.json
output/critic/: rag_02_data_critic_v0.txt  rag_06_conclusion_critic_v0.txt
output/fix_plan/: rag_06_conclusion_fix_v0_s0.md  rag_06_conclusion_fix_v0_s1.md
output/plan/: rag_01_intro_plan.md  rag_02_data_plan.md  rag_03_retrieval_plan.md  rag_04_evaluation_plan.md  rag_05_architecture_plan.md  rag_06_conclusion_plan.md
output/scenes_code/: rag_01_intro_code_v0_s0.py  rag_02_data_code_v0_s0.py  rag_03_retrieval_code_v0_s0.py  rag_04_evaluation_code_v0_s0.py  rag_05_architecture_code_v0_s0.py  rag_06_conclusion_code_v0_s0.py  rag_06_conclusion_code_v0_s1.py  rag_06_conclusion_code_v1_s0.py
src/: main.py  main_graph.py
src/components/: __init__.py  assembler.py  context_builder.py  critic.py  linter.py  renderer.py  rewriter.py  tts.py
src/core/: config.py  graph.py  models.py  state.py
src/llm/: client.py  prompts.py
src/utils/: code_ops.py  logger.py
tests/: test_components_assembler.py  test_components_context_builder.py  test_components_tts.py  test_critic_debug_save.py  test_fix_plan_output.py  test_graph_optimization.py  test_main_integration.py  test_main_save_storyboard.py  test_phase1_infrastructure.py  test_phase2_linter.py  test_phase3_renderer.py  test_rewriter_mock.py  test_rewriter_validation.py
(+1 files in other folders)
