[project]
name = "markdown-to-video"
version = "0.1.0"
description = ""
authors = [
    {name = "pswd123456",email = "6984163@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "openai (>=2.11.0,<3.0.0)",
    "manim (>=0.19.1,<0.20.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-openai (>=1.1.3,<2.0.0)",
    "langchain-core (>=1.2.0,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "dashscope (>=1.25.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "markdown_to_video", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)"
]
